<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlumnosNuevo">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/nuevo_alumno"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/nombre_alumno" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_alumno"
            android:paddingLeft="10dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paterno_alumno"
            android:paddingLeft="10dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materno_alumno"
            android:paddingLeft="10dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/materno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_alumno"
            android:paddingLeft="10dp"
            app:counterEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/colorAccent"
        android:drawablePadding="10dp"
        android:text="@string/guardar"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:theme="@style/Animation.Design.BottomSheetDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.198" />

</androidx.constraintlayout.widget.ConstraintLayout>