<LinearLayout
    android:id="@+id/rel"
    android:orientation="horizontal"
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    >

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/app_name"
        android:paddingLeft="5dp"
        android:paddingTop="5sp"
        android:paddingRight="5dp"
        android:scaleType="fitXY" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/idass"
        android:paddingLeft="10sp"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imagen"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/ll"
        android:gravity="left"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/idasistencia"
        android:text="@string/fecha"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ll"
        android:textSize="20sp"
        android:gravity="left"
        android:textStyle="bold"
        android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idasistencia"
        android:textColor="#3A3838"
        android:textSize="20sp"
        android:text="@string/estado"
        android:textStyle="italic"
        android:layout_toRightOf="@+id/imagen"
        android:paddingRight="10dp"
        />

    <TextView
        android:id="@+id/estado"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idasistencia"
        android:layout_toRightOf="@+id/tt"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/ii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idasistencia"
        android:layout_toRightOf="@+id/estado"
        android:paddingRight="10dp"
        android:text="@string/parcial"
        android:textColor="#3A3838"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/parcial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idasistencia"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:layout_toRightOf="@+id/ii"
        />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>